# render

./: .gitignore  Cargo.toml  DEVELOPING.md  README.md
.zed/: debug.json
crates/render_components/: Cargo.toml  empty_component.rs  layout_solvable.rs  lib.rs  row_component.rs  shapes.rs
crates/render_components/primitives/: mod.rs  rectangle.rs  text.rs
crates/render_events/: Cargo.toml  lib.rs
crates/render_layout/: Cargo.toml  general.rs  lib.rs  types.rs
crates/render_layout/absolute/: algo.rs
crates/render_layout/layouting/: mod.rs
crates/render_layout/positioning/: mod.rs  types.rs
crates/render_layout/row/: algo.rs
crates/render_layout/sizing/: mod.rs  types.rs
crates/render_linux/: Cargo.toml  lib.rs  windowing.rs
crates/render_linux/renderer/: clearing.rs  mod.rs  reconfigure.rs  rectangle.rs  rendering.rs  setup.rs  text.rs
crates/render_linux/renderer/shaders/: rectangle.wgsl  text.wgsl
crates/render_linux/renderer/text/: atlas.rs  colr.rs  debug.rs  mod.rs  shaping.rs  types.rs
crates/render_platform_options/: Cargo.toml  lib.rs
crates/render_proc_macro/: Cargo.toml  lib.rs
examples/: empty_window.rs  rounding.rs  text.rs
examples/calculator/: app.rs  logic.rs  main.rs  state.rs  topbar.rs
render/: lib.rs
