[package]
name = "render"
version = "0.1.0"
edition = "2024"

[lib]
path = "render/lib.rs"

[dependencies]
render_components = { path = "crates/render_components" }
render_platform_options = { path = "crates/render_platform_options" }

[target.'cfg(target_os = "linux")'.dependencies]
render_linux = { path = "crates/render_linux" }

[workspace]
members = [
    "crates/render_layout",
    "crates/render_linux",
    "crates/render_components",
    "crates/render_platform_options",
]

[[example]]
name = "empty_window"
path = "examples/empty_window.rs"
