[package]
name = "render"
version = "0.1.0"
edition = "2024"

[lib]
path = "render/lib.rs"

[dependencies]
render_components = { path = "crates/render_components" }
render_platform_options = { path = "crates/render_platform_options" }
render_events = { path = "crates/render_events" }
# TODO: figure out a way to remove this
render_layout = { path = "crates/render_layout" }

[dev-dependencies]
render_proc_macro = { path = "crates/render_proc_macro" }
lazy_static = "1.5.0"

[profile.release]
lto = true

[target.'cfg(target_os = "linux")'.dependencies]
render_linux = { path = "crates/render_linux" }

[workspace]
members = [
    "crates/render_layout",
    "crates/render_linux",
    "crates/render_components",
    "crates/render_platform_options",
    "crates/render_proc_macro",
]
