[package]
name = "render_linux"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
winit = "0.30.13"
wgpu = { version = "29.0.1", default-features = false, features = ["vulkan", "gles", "wgsl", "std", "parking_lot"] }
stderrlog = "0.6.0"
pollster = "0.4.0"
bytemuck = { version = "1.14", features = ["derive"] }
render_layout = { path = "../render_layout" }
render_components = { path = "../render_components" }
render_platform_options = { path = "../render_platform_options" }
render_events = { path = "../render_events" }
# TODO: review if all of these are necessary
ab_glyph = "0.2"
fontdb = "0.16"
rustybuzz = "0.20"
unicode-segmentation = "1.10"
unicode-script = "0.5"
skrifa = "0.42"
read-fonts = "0.39"
swash = "0.2"
unicode-bidi = "0.3.18"
